--- a/index.html
+++ b/index.html
@@ -12,79 +12,8 @@
 
 
 
-
-    <script>
-
-        // let a = 5;
-        // console.log(a);
-        // a = 10;
-        // console.log(a);
-
-        //    Variable Naming
-
-        // let 1a = 25;
-        // let %a = 2;
-        // let $a = 2;
-        // let _12 = 2;  
-
-        // let a = 5;
-        // let A = 8;
-
-        // console.log(a);
-        // console.log(A);
-
-        // let a = 12;
-
-        // console.log(A);
-
-        // var let = 25;
-        // console.log(let);
-
-
-        // let name = "rahul";
-        // let age = 25;
-        // let add = "pith";
-
-        // let name = "rahul" , age=25 , add="pith";
-
-        // let x = 2;
-        // let x = 5;
-
-        // var x = 2;
-        // console.log(x);
-        // var x = 5;
-
-        // let a = 25;
-        // let a = 25;
-        // console.log(a);
-
-        // console.log(yash);
-        // let yash = 20;
-
-        // let age = 35;
-
-        // {
-        //     // let age = 25;
-        //     console.log(age);
-        // }
-
-        // console.log(age);
-
-
-        {
-            var age = 35;
-            console.log(age);
-        }
-
-        console.log(age);
-
-
-
-
-
-
-
-    </script>
+    <!-- <script src="./7.2.Strings.js"></script> -->
+    <script src="./Number.js"></script>
 </body>
 
 </html>
