--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 
     <!-- <script src="./7.2.Strings.js"></script> -->
-    <script src="./Number.js"></script>
+    <!-- <script src="./Number.js"></script> -->
+    <script src="./Array.js"></script>
 </body>
 
 </html>
