Math Topic is end

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <!-- <script src="./7.2.Strings.js"></script> -->
     <!-- <script src="./Number.js"></script> -->
-    <script src="./Array.js"></script>
+    <!-- <script src="./Array.js"></script> -->
+    <script src="./Math.js"></script>
 </body>
 
 </html>
