--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
 <body>
 
-
-
     <!-- <script src="./7.2.Strings.js"></script> -->
     <!-- <script src="./Number.js"></script> -->
     <!-- <script src="./Array.js"></script> -->
-    <script src="./Math.js"></script>
+    <!-- <script src="./Math.js"></script> -->
+    <script src="./Loop.js"></script>
+
 </body>
 
 </html>
