Condition is completed

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!-- <script src="./Number.js"></script> -->
     <!-- <script src="./Array.js"></script> -->
     <!-- <script src="./Math.js"></script> -->
-    <script src="./Loop.js"></script>
+    <!-- <script src="./Loop.js"></script> -->
+    <script src="./conditions.js"></script>
 
 </body>
 
