TypeOf and Regular ex file uploaded

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <!-- <script src="./Array.js"></script> -->
     <!-- <script src="./Math.js"></script> -->
     <!-- <script src="./Loop.js"></script> -->
-    <script src="./conditions.js"></script>
+    <!-- <script src="./conditions.js"></script> -->
+    <!-- <script src="./Typeof.js"></script> -->
+    <script src="./Regular.js"></script>
 
 </body>
 
