try and catch is updated

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <!-- <script src="./Loop.js"></script> -->
     <!-- <script src="./conditions.js"></script> -->
     <!-- <script src="./Typeof.js"></script> -->
-    <script src="./Regular.js"></script>
+    <!-- <script src="./Regular.js"></script> -->
+    <script src="./Error_try_catch.js"></script>
 
 </body>
 
