--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <!-- <script src="./conditions.js"></script> -->
     <!-- <script src="./Typeof.js"></script> -->
     <!-- <script src="./Regular.js"></script> -->
-    <script src="./Error_try_catch.js"></script>
+    <!-- <script src="./Error_try_catch.js"></script> -->
+    <script src="./ArrowFunction.js"></script>
 
 </body>
 
